Added endpoint for image part and getting the media type for object in bucket